clientes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clientes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  eventos
  namespace: clientes
  labels:
    app:  eventos
spec:
  selector:
    matchLabels:
      app: eventos
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  eventos
    spec:
      containers:
      - name:  eventos
        image:  boletia/eventos
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8070
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: eventos
  namespace: clientes
spec:
  selector:
    app: eventos
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: eventos
      protocol: TCP
      port: 8070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  reservas
  namespace: clientes
  labels:
    app:  reservas
spec:
  selector:
    matchLabels:
      app: reservas
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  reservas
    spec:
      containers:
      - name:  reservas
        image:  boletia/reservas
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8071
          name:  http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: reservas
  namespace: clientes
spec:
  selector:
    app: reservas
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: eventos
      protocol: TCP
      port: 8071
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  inventario
  namespace: clientes
  labels:
    app:  inventario
spec:
  selector:
    matchLabels:
      app: inventario
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  inventario
    spec:
      containers:
      - name:  inventario
        image:  boletia/inventario
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notificaciones
  namespace: clientes
  labels:
    app:  notificaciones
spec:
  selector:
    matchLabels:
      app: notificaciones
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  notificaciones
    spec:
      containers:
      - name:  notificaciones
        image:  boletia/notificaciones
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
