kafka-mongodb-connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-mongodb-connect
  namespace: mongo
spec:
  selector:
    app: kafka-mongodb-connect
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: kafka-mongodb-connect
    protocol: TCP
    port: 8083
    targetPort: connector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  kafka-mongodb-connect
  namespace: mongo
  labels:
    app:  kafka-mongodb-connect
spec:
  selector:
    matchLabels:
      app: kafka-mongodb-connect
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  kafka-mongodb-connect
    spec:
      volumes:
      - name: properties
        configMap:
          name: "connect-init" 
      containers:
      - name:  kafka-mongodb-connect
        image:  kafka-mongodb-connect
        imagePullPolicy: Never
        volumeMounts:
        - name: properties
          mountPath: /properties       
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  8083
          name: connector
      restartPolicy: Always
