kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    app: zookeeper
  ports:
  - port: 2181
    protocol: TCP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: zookeeper 
  serviceName: zookeeper
  replicas: 1 
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      volumes:
      - name: vdata
        hostPath:
          path: /vdata      
      containers:
      - name: zookeeper
        image: bitnami/zookeeper
        imagePullPolicy: Never
        volumeMounts:
        - name: vdata
          mountPath: /bitnami/zookeeper
          subPathExpr: $(POD_NAME)           
        ports:
        - containerPort: 2181
        resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi 
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
  - name: kafka
    port: 9092
    protocol: TCP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka 
  serviceName: kafka
  replicas: 3 
  template:
    metadata:
      labels:
        app: kafka
    spec:
      volumes:
      - name: vdata
        hostPath:
          path: /vdata        
      containers:
      - name: kafka
        image: bitnami/kafka
        imagePullPolicy: Never
        volumeMounts:
        - name: vdata
          mountPath: /bitnami/kafka
          subPathExpr: $(POD_NAME)            
        ports:
        - containerPort: 9092
        resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
